--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,13 @@
                 <version>1.18.12</version>
             </dependency>
 
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>4.4.1</version>
+            </dependency>
+
+
 
         </dependencies>
     </dependencyManagement>
