security 权限安全 qq 登录

--- a/yidiandian-security-demo/src/main/resources/application.properties
+++ b/yidiandian-security-demo/src/main/resources/application.properties
@@ -9,3 +9,7 @@ yidiandian.security.code.image.length = 4
 yidiandian.security.code.image.width = 200
 #配置哪些路径需要图形验证码的校验
 yidiandian.security.code.image.url = /user,/user/*
+
+#这个要自己去申请，暂时用爱慕课的吧
+yidiandian.security.social.qq.appId = wxd99431bbff8305a0
+yidiandian.security.social.qq.appSecret = 60f78681d063590a469f1b297feff3c4
