--- a/yidiandian-security-core/pom.xml
+++ b/yidiandian-security-core/pom.xml
@@ -100,10 +100,11 @@
             <artifactId>hutool-all</artifactId>
             <version>4.4.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.68</version>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>4.2.3.RELEASE</version>
         </dependency>
 
     </dependencies>
