--- a/yidiandian-security-demo/src/main/resources/application.properties
+++ b/yidiandian-security-demo/src/main/resources/application.properties
@@ -11,5 +11,13 @@ yidiandian.security.code.image.width = 200
 yidiandian.security.code.image.url = /user,/user/*
 
 #这个要自己去申请，暂时用爱慕课的吧
-yidiandian.security.social.qq.app-Id = wxd99431bbff8305a0
+yidiandian.security.social.qq.app-Id = 100550231
+#yidiandian.security.social.qq.app-Id = wxd99431bbff8305a0
 yidiandian.security.social.qq.app-Secret = 60f78681d063590a469f1b297feff3c4
+#yidiandian.security.social.qq.app-Id = 101911737
+#yidiandian.security.social.qq.app-Secret = 942ae7047a4e84bd881bd0be9ea4eb00
+yidiandian.security.social.qq.providerId = callback.do
+
+yidiandian.security.social.filterProcessesUrl = /qqLogin
+
+yidiandian.security.browser.signUpUrl = demo-signUp.html
