--- a/yidiandian-security-borwser/pom.xml
+++ b/yidiandian-security-borwser/pom.xml
@@ -59,6 +59,13 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <version>2.3.4.RELEASE</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>4.2.3.RELEASE</version>
+        </dependency>
+
 
     </dependencies>
 
